--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-TESTING=False
-DEBUG=True
-SECRET_KEY=supdude
-SERVER=127.0.0.1
 DBHOST=localhost
 DBNAME=chess_application
 DBUSER=christian
+DEBUG=True
+SECRET_KEY=supdude
+SERVER=127.0.0.1
+DATABASE_URL=postgresql://localhost:5432/chess_application
+TESTING=False
