--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
-Flask=1.1.2
-flask_restful=0.3.9
-flask-socketio=5.0.1
-flask-SQLAlchemy=2.4.4
-psycopg2=2.9.1
-python-dotenv=0.17.1
-git 
+aniso8601==9.0.1
+bidict==0.21.4
+click==8.0.3
+colorama==0.4.4
+Flask==2.0.2
+Flask-RESTful==0.3.9
+Flask-SocketIO==5.1.1
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
+itsdangerous==2.0.1
+Jinja2==3.0.2
+MarkupSafe==2.0.1
+psycopg2==2.9.1
+python-dotenv==0.19.1
+python-engineio==4.2.1
+python-socketio==5.4.1
+pytz==2021.3
+six==1.16.0
+SQLAlchemy==1.4.26
+Werkzeug==2.0.2
