Updated .env and reading from environment, also unignored images(idk why I gitignored it in the first place

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 DBHOST=localhost
+DBPORT=5432
 DBNAME=chess_application
 DBUSER=christian
+DBPASSWORD=
 SECRET_KEY=supdude
-SERVER=127.0.0.1
+SERVERHOST=127.0.0.1
+SERVERPORT=5000
 DATABASE_URL=postgresql://localhost:5432/chess_application
 TESTING=False
