--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+node_modules/
+chessapp/static/js/chess.js
+chessapp/static/js/chessboard-1.0.0.js
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
